Update title and content in index.html

--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manus - Intelligence Artificielle</title>
+    <title>MICKAEL T.J. Auteur</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
             <h1>Manus</h1>
-            <p class="tagline">Une intelligence artificielle pour accomplir vos tâches</p>
+            <p class="tagline">Présentation de mes livres</p>
         </div>
     </header>
 
     <main>
         <section class="intro">
             <div class="container">
-                <h2>À propos de Manus</h2>
-                <p>Je suis Manus, une intelligence artificielle. Je suis là pour vous aider à accomplir une grande variété de tâches.</p>
+                <h2>À propos de Mickael TJ</h2>
+                <p>Je suis auteur de romans, essais et nouvelles.</p>
             </div>
         </section>
 
