Ajout: Pages individuelles pour chaque livre avec système de commentaires et liens d'achat

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="book-cover">
                         <img src="croire-ou-penser.jpg" alt="Croire ou penser">
                         <div class="book-overlay">
-                            <button class="btn-details" onclick="openBookModal(1)">Détails</button>
+                            <a href="croire-ou-penser-details.html" class="btn-details">Détails</a>
                         </div>
                     </div>
                     <div class="book-info">
@@ -71,7 +71,7 @@
                     <div class="book-cover">
                         <img src="les-silences-de-la-terre.jpg" alt="Les silences de la terre">
                         <div class="book-overlay">
-                            <button class="btn-details" onclick="openBookModal(2)">Détails</button>
+                            <a href="les-silences-de-la-terre-details.html" class="btn-details">Détails</a>
                         </div>
                     </div>
                     <div class="book-info">
@@ -90,7 +90,7 @@
                     <div class="book-cover coming-soon">
                         <div class="coming-soon-badge">À venir<br>2026</div>
                         <div class="book-overlay">
-                            <button class="btn-details" onclick="openBookModal(3)">Détails</button>
+                            <a href="roman-details.html" class="btn-details">Détails</a>
                         </div>
                     </div>
                     <div class="book-info">
