Revise author details and book titles in index.html
Updated author information and book titles.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Hero Section -->
     <section id="accueil" class="hero">
         <div class="hero-content">
-            <h2>Allez plus que son imagination</h2>
+            <h2>Allez plus loin que son imagination</h2>
             <p>Découvrez les univers littéraires de Mickael TJ</p>
             <a href="#livres" class="btn btn-primary">Explorer les livres</a>
         </div>
@@ -58,7 +58,7 @@
                     <div class="book-info">
                         <h3>Croire ou Penser</h3>
                         <p class="book-type">Essai</p>
-                        <p class="book-author">Jean-Michel Thuillet</p>
+                        <p class="book-author">Mickael T.J.</p>
                         <div class="book-rating">
                             <span class="stars">★★★★★</span>
                             <span class="rating-count">(0 avis)</span>
@@ -77,7 +77,7 @@
                     <div class="book-info">
                         <h3>Les Silences de la Terre</h3>
                         <p class="book-type">Essai</p>
-                        <p class="book-author">Jean-Michel Thuillet</p>
+                        <p class="book-author">Mickael T.J.</p>
                         <div class="book-rating">
                             <span class="stars">★★★★★</span>
                             <span class="rating-count">(0 avis)</span>
@@ -111,7 +111,14 @@
                 <div class="author-text">
                     <h2>À Propos de l'Auteur</h2>
                     <p class="author-bio">
-                        Biographie à compléter...
+                        Mickael T.J. est un explorateur des zones d'ombre de l'Histoire, animé par une seule conviction : derrière chaque légende se cache une vérité qui n'attend qu'à être révélée.
+
+Qu'il s'agisse de Romans, de nouvelles ou d'Essais, sa plume navigue sans cesse entre la rigueur du passé et la puissance de l'imaginaire.
+
+Dans ses fictions, il insuffle de la vie à des enquêtes captivantes où des personnages complexes déchiffrent l'occulte par la science et la logique, transportant le lecteur là où le suspense rencontre l'Histoire.
+Dans ses essais, il vous invite à le suivre sur les chemins de traverse du passé, pour décortiquer avec précision les mythes et les mystères.
+
+Fasciné par les récits qui donnent à réfléchir, Mickael T.J. a pour seule mission d'utiliser l'art de l'écriture pour prouver que la plus grande des aventures est toujours la quête de la vérité.
                     </p>
                     <div class="author-socials">
                         <a href="https://www.facebook.com/mickaeltj" target="_blank" class="social-link">
