Fix French labels and titles in index.html
Updated button labels and book titles for consistency in French.

--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
             <!-- Filtres -->
             <div class="filters">
                 <button class="filter-btn active" data-filter="all">Tous</button>
-                <button class="filter-btn" data-filter="essai">Essais</button>
-                <button class="filter-btn" data-filter="roman">Roman</button>
+                <button class="filter-btn" data-filter="essai">Romans</button>
+                <button class="filter-btn" data-filter="roman">Essais</button>
+                <button class="filter-btn" data-filter="roman">Nouvelles</button>
             </div>
 
-            <!-- Galerie de livres -->
+            <!-- Galerie des livres -->
             <div class="books-grid">
-                <!-- Livre 1: Croire ou penser -->
+                <!-- Livre 1: Croire ou Penser -->
                 <div class="book-card" data-category="essai">
                     <div class="book-cover">
-                        <img src="croire-ou-penser.jpg" alt="Croire ou penser">
+                        <img src="croire-ou-penser.jpg" alt="Croire ou Penser">
                         <div class="book-overlay">
                             <a href="croire-ou-penser-details.html" class="btn-details">Détails</a>
                         </div>
@@ -66,7 +67,7 @@
                     </div>
                 </div>
 
-                <!-- Livre 2: Les silences de la terre -->
+                <!-- Livre 2: Les Silences de la Terre -->
                 <div class="book-card" data-category="essai">
                     <div class="book-cover">
                         <img src="les-silences-de-la-terre.jpg" alt="Les silences de la terre">
