Update book title and author bio in index.html

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <div class="book-info">
-                        <h3>Titre du Roman</h3>
+                        <h3>Les Chroniques de Kaelan Valois - Tome 1 : L'Ombre des Ténèbres</h3>
                         <p class="book-type">Roman</p>
                         <p class="book-author">Mickael TJ</p>
                         <p class="coming-soon-text">Sortie prévue début 2026</p>
@@ -112,14 +112,14 @@
                 <div class="author-text">
                     <h2>À Propos de l'Auteur</h2>
                     <p class="author-bio">
-                        <justify>Mickael T.J. est un explorateur des zones d'ombre de l'Histoire, animé par une seule conviction : derrière chaque légende se cache une vérité qui n'attend qu'à être révélée.
+                        Mickael T.J. est un explorateur des zones d'ombre de l'Histoire, animé par une seule conviction : derrière chaque légende se cache une vérité qui n'attend qu'à être révélée.
 
 Qu'il s'agisse de Romans, de nouvelles ou d'Essais, sa plume navigue sans cesse entre la rigueur du passé et la puissance de l'imaginaire.
 
 Dans ses fictions, il insuffle de la vie à des enquêtes captivantes où des personnages complexes déchiffrent l'occulte par la science et la logique, transportant le lecteur là où le suspense rencontre l'Histoire.
 Dans ses essais, il vous invite à le suivre sur les chemins de traverse du passé, pour décortiquer avec précision les mythes et les mystères.
 
-Fasciné par les récits qui donnent à réfléchir, Mickael T.J. a pour seule mission d'utiliser l'art de l'écriture pour prouver que la plus grande des aventures est toujours la quête de la vérité.</justify>
+Fasciné par les récits qui donnent à réfléchir, Mickael T.J. a pour seule mission d'utiliser l'art de l'écriture pour prouver que la plus grande des aventures est toujours la quête de la vérité.
                     </p>
                     <div class="author-socials">
                         <a href="https://www.facebook.com/mickaeltj" target="_blank" class="social-link">
