--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 <!-- Livre 3: Roman (à venir) -->
                 <div class="book-card" data-category="roman">
                     <div class="book-cover coming-soon">
+                        <img src="Kaelan_Couverture%20expo.jpg" alt="Les Chroniques de Kaelan">
                         <div class="coming-soon-badge">À venir<br>2026</div>
                         <div class="book-overlay">
                             <a href="roman-details.html" class="btn-details">Détails</a>
