--- a/roman-details.html
+++ b/roman-details.html
@@ -34,6 +34,7 @@
                 <!-- Couverture et infos principales -->
                 <div class="book-details-left">
                     <div class="book-cover-large coming-soon-large">
+                        <img src="Kaelan_Couverture expo.jpg" alt="Croire ou Penser">
                         <div class="coming-soon-badge-large">À venir<br>2026</div>
                     </div>
                     
