--- a/index.html
+++ b/index.html
@@ -196,8 +196,22 @@
         </section>
 
     <footer>
-        </footer>
-
+        <div class="footer-content">
+            <p>&copy; 2024 Mickael TJ. Tous droits réservés.</p>
+            <p>
+                <a href="mentions-legales.html">Mentions Légales</a>
+                |
+                <a href="politique-confidentialite.html">Politique de Confidentialité</a>
+            </p>
+            <p>Création de site web : [Votre Nom/Pseudo]</p>
+            
+            <div class="social-links">
+                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+    </footer>
 
     <script>
         (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
