--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </div>
         </div>
     </footer>
-
+<script src="script.js"></script> 
     <script>
         (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
         .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
