--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#livres">Livres</a></li>
                 <li><a href="#auteur">À propos</a></li>
                 <li><a href="#newsletter">Newsletter</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
