--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
             <div class="container">
                 <div class="featured-book-container">
                     <div class="featured-book-image">
-                        <div class="coming-soon-badge-featured">À venir<br>Début 2026</div>
-                    </div>
+    <img src="Kaelan_Couverture expo.jpg" alt="Couverture du livre Les Chroniques de Kaelan Valois - Tome 1">
+        <div class="coming-soon-badge-featured">À venir<br>Début 2026</div>
+</div>
                     <div class="featured-book-content">
                         <span class="featured-badge">✨ À venir</span>
                         <h2>Les Chroniques de Kaelan Valois</h2>
