--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 |
                 <a href="politique-confidentialite.html">Politique de Confidentialité</a>
             </p>
-            <p>Création de site web : [Votre Nom/Pseudo]</p>
+            <p>AUTEUR : MICKAEL T.J.</p>
             
             <div class="social-links">
                 <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
