--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
                 
                 <div style="text-align: center; margin-top: 3rem;">
                     <h3>Ou trouvez-moi sur :</h3>
-                    <p style="margin-bottom: 1rem;">mickael-tj@exemple.com</p>
+                    <p style="margin-bottom: 1rem;">jmthuillet.pro@gmail.com</p>
                     <div class="social-links" style="margin-top: 0;">
                         <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -71,7 +71,7 @@
 
     <footer>
         <div class="footer-content">
-            <p>&copy; 2024 Mickael TJ. Tous droits réservés.</p>
+            <p>&copy; 2025-2026 J.M THUILLET | Mickael TJ. Tous droits réservés.</p>
             <p>
                 <a href="mentions-legales.html">Mentions Légales</a>
                 |
