--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
             <div class="author-text">
                 
                 <p class="author-bio">
-                    Mickael TJ est un auteur français passionné par la Fantasy épique et la construction de mondes complexes. Né à [Ville] en [Année de naissance, si vous souhaitez l'inclure], il a toujours été fasciné par les mythes, les légendes et les grandes épopées qui façonnent notre imaginaire.
+                    Mickael TJ est un auteur français passionné par la Fantasy épique et la construction de mondes complexes. Né à Bourgoin dans les années 60, il a toujours été fasciné par les mythes, les légendes et les grandes épopées qui façonnent notre imaginaire.
                     <br><br>
-                    Son premier roman, *[Nom du premier livre déjà publié]*, a été le fruit de [Nombre] années de travail, plongeant les lecteurs dans le royaume de Valdoria, un univers riche où la justice et la lumière se heurtent aux forces de l'ombre. 
+                    Son premier roman, *Les Chroniques de Kaelan Valois - L'ombre des Ténèbres*, a été le fruit de plusieurs mois de travail. Il va avec ce roman plonger les lecteurs dans l'univers médiéval, riche où la justice et la lumière se heurtent aux forces de l'ombre. 
                     <br><br>
-                    Quand il n'est pas en train d'écrire, Mickael aime [Hobby 1], [Hobby 2] et passer du temps avec [Famille/Animaux de compagnie/etc.]. Il croit fermement que chaque histoire a le pouvoir d'inspirer et de transporter, et il espère que les Chroniques de Kaelan Valois résonneront avec ceux qui cherchent l'aventure et l'espoir au cœur des ténèbres.
+                    Quand il n'est pas en train d'écrire, Mickael aime la musique, la peinture et le graphisme et passer du temps avec sa famille. Il pense fermement que chaque histoire a le pouvoir d'inspirer et de transporter, et il espère que les Chroniques de Kaelan Valois résonneront avec ceux qui cherchent l'aventure et l'espoir au cœur des ténèbres.
                 </p>
 
                 <div class="author-socials">
