--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             </div>
             
             <div class="author-image">
-                <img src="photo-auteur.jpg" alt="Photo de Mickael TJ, Auteur">
+                <img src="image10.png" alt="Photo de Mickael TJ, Auteur">
             </div>
             
         </div>
