--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
                 </p>
 
                 <div class="author-socials">
-                    <a href="#" target="_blank" class="social-link"><i class="fab fa-facebook-f"></i> Facebook</a>
-                    <a href="#" target="_blank" class="social-link"><i class="fab fa-instagram"></i> Instagram</a>
+                    <a href="https://www.facebook.com/mickaeltj" target="_blank" class="social-link"><i class="fab fa-facebook-f"></i> Facebook</a>
+                    <a href="https://www.instagram.com/mickael_tj/" target="_blank" class="social-link"><i class="fab fa-instagram"></i> Instagram</a>
                     <a href="#" target="_blank" class="social-link"><i class="fab fa-twitter"></i> Twitter</a>
                 </div>
             </div>
