--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
 
     <main>
         <section id="accueil" class="hero">
+           <section class="hero">
+    <div class="hero-background-image">
+        <img src="Kaelan_Couverture expo.jpg" alt="Image de fond de la couverture du roman">
+    </div>
+
+    <div class="hero-content">
+        <h2>Allez plus loin que son imagination</h2>
+        <p>Découvrez un monde où l'aventure, la magie et le destin s'entremêlent.</p>
+        <a href="#featured-book" class="btn btn-primary">Découvrir le livre</a>
+    </div>
+</section>
             <div class="hero-content">
                 <h2>Allez plus que son imagination</h2>
                 <p>Découvrez les univers littéraires de Mickael TJ</p>
