--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                     </div>
 
                     <div class="book-card" data-category="roman">
+                        <img src="Kaelan_Couverture expo.jpg" alt="Les silences de la terre">
                         <div class="book-cover coming-soon">
                             <div class="coming-soon-badge">À venir<br>2026</div>
                             <div class="book-overlay">
