--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+T<!DOCTYPE html>
 <html lang="fr">
 <head>
 
@@ -101,7 +101,7 @@
                         <div class="book-info">
                             <h3>Croire ou Penser</h3>
                             <p class="book-type">Essai</p>
-                            <p class="book-author">Jean-Michel Thuillet</p>
+                            <p class="book-author">Mickael T.J.</p>
                             <div class="book-formats-small">
                                 <span class="format-small"><i class="fas fa-book"></i> Papier</span>
                                 <span class="format-small"><i class="fas fa-mobile-alt"></i> Ebook</span>
@@ -130,7 +130,7 @@
                         <div class="book-info">
                             <h3>Les Silences de la Terre</h3>
                             <p class="book-type">Essai</p>
-                            <p class="book-author">Jean-Michel Thuillet</p>
+                            <p class="book-author">Mickael T.J.</p>
                             <div class="book-formats-small">
                                 <span class="format-small"><i class="fas fa-book"></i> Papier</span>
                                 <span class="format-small"><i class="fas fa-mobile-alt"></i> Ebook</span>
