Update and rename roman-details.html to kaelan-details.html

--- a/kaelan-details.html
+++ b/kaelan-details.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roman - Mickael TJ</title>
+    <title>Les Chroniques de Kaelan Valois - Mickael TJ</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="book-details.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -20,7 +20,7 @@
                 <li><a href="index.html#accueil">Accueil</a></li>
                 <li><a href="index.html#livres">Livres</a></li>
                 <li><a href="index.html#auteur">À propos</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -41,7 +41,7 @@
                         <h2>Les Chroniques de Kaelan Valois</h2>
                         <h3 style="color: var(--secondary-color); margin-bottom: 1rem;">Tome 1 : L'Ombre des Ténèbres</h3>
                         <p class="book-author-detail">Mickael TJ</p>
-                        <p class="book-type-detail">Fantasy Épique</p>
+                        <p class="book-type-detail">Fantasy Épique Médiéval</p>
                         
                         <div class="book-rating-detail">
                             <span class="stars">★★★★★</span>
@@ -76,11 +76,11 @@
                         <table class="book-info-table">
                             <tr>
                                 <td><strong>Auteur</strong></td>
-                                <td>Mickael TJ</td>
+                                <td>Mickael T.J.</td>
                             </tr>
                             <tr>
                                 <td><strong>Genre</strong></td>
-                                <td>Fantasy Épique</td>
+                                <td>Fantasy Épique Médiéval</td>
                             </tr>
                             <tr>
                                 <td><strong>Date de publication</strong></td>
@@ -88,17 +88,17 @@
                             </tr>
                             <tr>
                                 <td><strong>Nombre de pages</strong></td>
-                                <td>À compléter</td>
+                                <td>250</td>
                             </tr>
                             <tr>
                                 <td><strong>ISBN</strong></td>
-                                <td>À compléter</td>
+                                <td>979-10-980569-0-1</td>
                             </tr>
                         </table>
                         
                         <h3>Mots-clés</h3>
                         <div class="book-tags">
-                            <span class="tag">À compléter</span>
+                            <span class="tag">Aventure, fantasy, épique, romance</span>
                         </div>
                     </div>
                 </div>
