--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ T<!DOCTYPE html>
                     </div>
 
                     <div class="book-card" data-category="roman">
-                        <img src="Kaelan_Couverture expo.jpg" alt="#">
+                        <img src="les-silences-de-la-terre.jpg" alt="#">
                         <div class="book-cover coming-soon">
                             <div class="coming-soon-badge">À venir<br>2026</div>
                             <div class="book-overlay">
@@ -151,7 +151,7 @@ T<!DOCTYPE html>
                                     <a href="roman-details.html" class="btn-action">
                                         <i class="fas fa-book"></i> Lire un extrait
                                     </a>
-                                    <a href="roman-details.html" class="btn-action">
+                                    <a href="Kaelan-details.html" class="btn-action">
                                         <i class="fas fa-info-circle"></i> Plus d'infos
                                     </a>
                                 </div>
