--- a/index.html
+++ b/index.html
@@ -142,31 +142,32 @@ T<!DOCTYPE html>
                         </div>
                     </div>
 
-                    <div class="book-card" data-category="roman">
-                        <img src="les-silences-de-la-terre.jpg" alt="#">
-                        <div class="book-cover coming-soon">
-                            <div class="coming-soon-badge">À venir<br>2026</div>
+                    <div class="book-card" data-category="essai">
+                        <div class="book-cover">
+                            <img src="croire-ou-penser.jpg" alt="Croire ou Penser">
                             <div class="book-overlay">
                                 <div class="book-actions">
-                                    <a href="roman-details.html" class="btn-action">
+                                    <a href="croire-ou-penser-details.html" class="btn-action">
                                         <i class="fas fa-book"></i> Lire un extrait
                                     </a>
-                                    <a href="Kaelan-details.html" class="btn-action">
-                                        <i class="fas fa-info-circle"></i> Plus d'infos
+                                    <a href="croire-ou-penser-details.html" class="btn-action">
+                                        <i class="fas fa-shopping-cart"></i> Acheter
                                     </a>
                                 </div>
                             </div>
                         </div>
                         <div class="book-info">
-                            <h3>Les Chroniques de Kaelan Valois</h3>
-                            <p class="book-subtitle">Tome 1 : L'Ombre des Ténèbres</p>
-                            <p class="book-type">Fantasy Épique</p>
-                            <p class="book-author">Mickael TJ</p>
+                            <h3>Croire ou Penser</h3>
+                            <p class="book-type">Essai</p>
+                            <p class="book-author">Mickael T.J.</p>
                             <div class="book-formats-small">
                                 <span class="format-small"><i class="fas fa-book"></i> Papier</span>
                                 <span class="format-small"><i class="fas fa-mobile-alt"></i> Ebook</span>
                             </div>
-                            <p class="coming-soon-text">Sortie prévue début 2026</p>
+                            <div class="book-rating">
+                                <span class="stars">★★★★★</span>
+                                <span class="rating-count">(0 avis)</span>
+                            </div>
                         </div>
                     </div>
 
