--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ T<!DOCTYPE html>
 
                     <div class="book-card" data-category="essai">
                         <div class="book-cover">
-                            <img src="croire-ou-penser.jpg" alt="Croire ou Penser">
+                            <img src="Kaelan_Couverture expo.jpg" alt="Croire ou Penser">
                             <div class="book-overlay">
                                 <div class="book-actions">
                                     <a href="croire-ou-penser-details.html" class="btn-action">
