--- a/index.html
+++ b/index.html
@@ -142,15 +142,15 @@ T<!DOCTYPE html>
                         </div>
                     </div>
 
-                    <div class="book-card" data-category="essai">
+                    <div class="book-card" data-category="Roman">
                         <div class="book-cover">
-                            <img src="Kaelan_Couverture expo.jpg" alt="Croire ou Penser">
+                            <img src="Kaelan_Couverture expo.jpg" alt="Les Chroniques de Kaelan Valois">
                             <div class="book-overlay">
                                 <div class="book-actions">
-                                    <a href="croire-ou-penser-details.html" class="btn-action">
+                                    <a href="Kaelan-details.html" class="btn-action">
                                         <i class="fas fa-book"></i> Lire un extrait
                                     </a>
-                                    <a href="croire-ou-penser-details.html" class="btn-action">
+                                    <a href="Kaelan-details.html" class="btn-action">
                                         <i class="fas fa-shopping-cart"></i> Acheter
                                     </a>
                                 </div>
