--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ T<!DOCTYPE html>
                             </div>
                         </div>
                         <div class="book-info">
-                            <h3>Croire ou Penser</h3>
+                            <h3>Les Chroniques de Kaelan Valois - L'Ombre des Ténèbres</h3>
                             <p class="book-type">Essai</p>
                             <p class="book-author">Mickael T.J.</p>
                             <div class="book-formats-small">
