--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@ T<!DOCTYPE html>
                             <img src="Kaelan_Couverture expo.jpg" alt="Les Chroniques de Kaelan Valois">
                             <div class="book-overlay">
                                 <div class="book-actions">
-                                    <a href="Kaelan-details.html" class="btn-action">
+                                    <a href="kaelan-details.html" class="btn-action">
                                         <i class="fas fa-book"></i> Lire un extrait
                                     </a>
-                                    <a href="Kaelan-details.html" class="btn-action">
+                                    <a href="kaelan-details.html" class="btn-action">
                                         <i class="fas fa-shopping-cart"></i> Acheter
                                     </a>
                                 </div>
