--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-T<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
-
+/* test de re-publication */
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mickael TJ - Auteur</title>
