--- a/index.html
+++ b/index.html
@@ -192,7 +192,11 @@
                 </div>
             </div>
         </section>
-        
+         <section id="contact" class="contact-section">
+            <div class="container">
+                <h2>Contactez-moi</h2>
+                </div>
+        </section>
        <section class="author-section" id="auteur">
             <div class="container">
                 <h2>À propos de l'Auteur</h2>
