--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="featured-book-container">
                 <div class="featured-book-image">
-                    <img src="Kaelan_Couverture expo.jpg" alt="Couverture du livre Les Chroniques de Kaelan Valois - Tome 1">
+                    <img src="#" alt="Couverture du livre Les Chroniques de Kaelan Valois - Tome 1">
                     <div class="coming-soon-badge-featured">À venir<br>Début 2026</div>
                 </div>
                 <div class="featured-book-content">
@@ -54,10 +54,10 @@
                     </p>
                     
                     <div class="featured-actions">
-                        <a href="roman-details.html" class="btn btn-primary">
+                        <a href="kaelan-details.html" class="btn btn-primary">
                             <i class="fas fa-book"></i> Lire un extrait
                         </a>
-                        <a href="roman-details.html" class="btn btn-secondary">
+                        <a href="kaelan-details.html" class="btn btn-secondary">
                             <i class="fas fa-info-circle"></i> Plus de détails
                         </a>
                     </div>
