--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         
                     </div>
                     <div class="featured-book-content">
-                        <span class="featured-badge">✨ À venir</span>
+                        <span class="featured-badge">✨ À venir - Début 2026</span>
                         <h2>Les Chroniques de Kaelan Valois</h2>
                         <h3>Tome 1 : L'Ombre des Ténèbres</h3>
                         <p class="featured-tagline">« Et si la mort n'était qu'un début ? »</p>
