--- a/kaelan-details.html
+++ b/kaelan-details.html
@@ -33,6 +33,10 @@
             <div class="book-details-container">
                 <!-- Couverture et infos principales -->
                 <div class="book-details-left">
+                    <div class="featured-book-image">
+                        <img src="Kaelan_Couverture expo.jpg" alt="Couverture du livre Les Chroniques de Kaelan Valois - Tome 1">
+                        
+                    </div>
                     <div class="book-cover-large coming-soon-large">
                         <div class="coming-soon-badge-large">À venir<br>2026</div>
                     </div>
