--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                     <a href="roman-details.html" class="btn-action">
                                         <i class="fas fa-book"></i> Lire un extrait
                                     </a>
-                                    <a href="roman-details.html" class="btn-action">
+                                    <a href="kaelan-details.html" class="btn-action">
                                         <i class="fas fa-shopping-cart"></i> Acheter
                                     </a>
                                 </div>
@@ -163,6 +163,10 @@
                             <div class="book-formats-small">
                                 <span class="format-small"><i class="fas fa-book"></i> Papier</span>
                                 <span class="format-small"><i class="fas fa-mobile-alt"></i> Ebook</span>
+                            </div>
+                            <div class="book-rating">
+                                <span class="stars">★★★★★</span>
+                                <span class="rating-count">(0 avis)</span>
                             </div>
                             <p class="coming-soon-text">Sortie prévue début 2026</p>
                         </div>
